Bug 288827 - Can't eject mounted drives without first selecting them
Summary: Can't eject mounted drives without first selecting them
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-devicenotifier (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 290229 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-12 18:16 UTC by Timothée Ravier
Modified: 2012-01-16 20:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timothée Ravier 2011-12-12 18:16:13 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Arch Linux testing with kde-unstable repository
KDE 4.7.90 (4.8.0 beta 2)

I can't eject mounted drives without first selecting them in the device notifier.
I can't mount them either without selecting them beforehand.

Btw, the new QML design notifier is much better than the old one. Good job.

Reproducible: Didn't try

Steps to Reproduce:
Mount an external drive, using the device-notifier. (the device has to be selected, else clicking on the square icon wikll not mount it)
Click elsewhere to release the selection.
Click on the device notifier again.
Without selecting the device, click on the eject icon.

Actual Results:  
Nothing happens if the device is not selected

Expected Results:  
Clicking on the eject/squared icon should mount the device (it used to work like that in previous release, with the non-QML one).
Comment 1 Marco Martin 2011-12-16 10:53:45 UTC
Git commit 35a0e3c71b0ca6e8306edfdb4f4ea1b30a87869b by Marco Martin.
Committed on 16/12/2011 at 11:53.
Pushed by mart into branch 'master'.

ignore mouse presses

BUG: 288827

M  +5    -0    plasma/declarativeimports/core/declarativeitemcontainer.cpp
M  +1    -0    plasma/declarativeimports/core/declarativeitemcontainer_p.h

http://commits.kde.org/kde-runtime/35a0e3c71b0ca6e8306edfdb4f4ea1b30a87869b
Comment 2 Timothée Ravier 2011-12-27 12:34:18 UTC
Ok, so now I'm using KDE 4.7.95 (4.8.0 RC 1), and the bug is still here in some (most) cases.

Unmounting works sometimes, if you click several times and fast enough on the icon, but not all the time. Mounting doesn't work for me.

Steps to Reproduce:
Insert pendrive/external drive
Without selecting the device, click on the mount icon. The helper text is ok, but clicking won't mount the drive.

Steps to Reproduce:
Mount an external drive/pendrive.
Click on the device notifier, make sure no the device is _not_ selected.
Without selecting the device, click on the eject icon.
Comment 3 Jacopo De Simoi 2011-12-31 11:14:51 UTC
Indeed, the issue is still present. Marco, do you have any ideas?
Comment 4 Jacopo De Simoi 2011-12-31 11:15:01 UTC
*** Bug 290229 has been marked as a duplicate of this bug. ***
Comment 5 Marco Martin 2012-01-09 20:54:29 UTC
Git commit 1bb049418741c79729d52340e317125ce097e262 by Marco Martin.
Committed on 05/01/2012 at 21:58.
Pushed by mart into branch 'master'.

don't play with z ordering

makes it work slightly better
still broken, the problem is the behavior of tooltips

M  +0    -1    plasma/generic/applets/devicenotifier/package/contents/ui/DeviceItem.qml

http://commits.kde.org/kde-workspace/1bb049418741c79729d52340e317125ce097e262
Comment 6 Marco Martin 2012-01-09 20:54:29 UTC
Git commit a0c3015940d6b514bc7d5dc01cd6e23dc852c767 by Marco Martin.
Committed on 09/01/2012 at 21:51.
Pushed by mart into branch 'master'.

make the container itself be a mousearea

in this way events are nicely managed and passed in the parent hierarchy and not eaten up

M  +30   -40   plasma/generic/applets/devicenotifier/package/contents/ui/DeviceItem.qml

http://commits.kde.org/kde-workspace/a0c3015940d6b514bc7d5dc01cd6e23dc852c767
Comment 7 Marco Martin 2012-01-16 20:58:15 UTC
Git commit 20a656059c0bb82453b7d279697e5a0476c99b1b by Marco Martin.
Committed on 16/01/2012 at 21:56.
Pushed by mart into branch 'KDE/4.8'.

fix eject button

M  +30   -40   plasma/generic/applets/devicenotifier/package/contents/ui/DeviceItem.qml

http://commits.kde.org/kde-workspace/20a656059c0bb82453b7d279697e5a0476c99b1b