ignore mouse presses

BUG: 288827